<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Sales</string>
    <string name="slogan">Everything is here</string>

    <string name="about_text">Smart Sales App.
    </string>

    <!--string drawer menu-->
    <string name="menu_home_page">Home Page</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_search">Search</string>
    <string name="menu_cart">Cart</string>
    <string name="offers">offers</string>

    <string name="menu_orders">Orders</string>
    <string name="menu_profile">Profile</string>


    <string name="menu_new">New Items</string>
    <string name="menu_promotions">Promotions</string>

    <string name="menu_clothing">Clothing</string>
    <string name="menu_shoes">Shoes</string>
    <string name="menu_watches">Watches</string>
    <string name="menu_accessories">Accessories</string>
    <string name="menu_bags">Bags</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--exit notification-->
    <string name="press_again_exit_app">Press again to exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_activity_orders_details">ActivityOrdersDetails</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_search_result">ActivitySearchResult</string>
    <string name="title_activity_activity_securty">ActivitySecurty</string>

</resources>
